test/types/tuple/diten/badTupleExpandInMain.good
badTupleExpandInMain.chpl:1: In function 'main':
badTupleExpandInMain.chpl:3: error: illegal tuple expansion context
